option1/hadoop/datanode_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: datanode
  name: datanode
spec:
  ports:
    - name: "9864"
      port: 9864
      targetPort: 9864
  selector:
    io.kompose.service: datanode
status:
  loadBalancer: {}
