option1/hadoop/namenode-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: namenode
  name: namenode
spec:
  ports:
    - name: "9870"
      port: 9870
      targetPort: 9870
  selector:
    io.kompose.service: namenode
  type: LoadBalancer
