option1/hadoop/docker-hadoop-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker-hadoop-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/docker-hadoop-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker-hadoop-default: "true"
